Add feature variable again

--- a/apps/surveychimp-survey-spa/src/index.html
+++ b/apps/surveychimp-survey-spa/src/index.html
@@ -10,5 +10,12 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      window.process = {
+        env: {
+          NX_SHOW_STARS: '%NX_SHOW_STARS%',
+        },
+      };
+    </script>
   </body>
 </html>
