--- a/apps/surveychimp-survey-spa/src/index.html
+++ b/apps/surveychimp-survey-spa/src/index.html
@@ -17,5 +17,14 @@
         },
       };
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-249857786-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-249857786-1');
+    </script>
+    
   </body>
 </html>
