Add google optimize script

--- a/apps/surveychimp-survey-spa/src/index.html
+++ b/apps/surveychimp-survey-spa/src/index.html
@@ -25,6 +25,7 @@
     
       gtag('config', 'UA-249857786-1');
     </script>
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-PQM87SW"></script>
     
   </body>
 </html>
